added changes page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <script src="extra/clase2.js"></script>
+    <script src="extra/clase4/2.js"></script>
   </head>
   <body>
     <h1>Hola</h1>
     <p>Esta es mi primera pagina web</p>
+    <img src="" alt="Pagina Web">
   </body>
 </html>
