--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <script src="extra/clase4/2.js"></script>
+    <script src="src/clase10.js"></script>
   </head>
   <body>
     <h1>Hola</h1>
-    <p>Esta es mi primera pagina web</p>
+    <p><b>Esta es mi primera pagina web</b></p>
+    <p>Lorem ipsum dolor <i><b>sit</b></i> <i>distinctio</i> expedita.</p>
     <img src="" alt="Pagina Web">
+    <blockquote cite="http://en.wikipedia.org/wiki/
+Winnie-the-Pooh">
+  <p>Did you ever stop to think, and forget to start again?</p>
+  </blockquote>
+  <p>Gracias por este aporte a <a target="_blank" href="www.gooogle.com">Pepito Pirulo</a> </p>
+  
+    <p>Movie Reviews:
+      <ul>
+        <li>
+          <a href="http://www.empireonline.com">
+            Empire
+          </a>
+        </li>
+        <li><a href="http://www.metacritic.com">
+        Metacritic</a></li>
+        <li><a href="http://www.rottentomatoes.com">
+        Rotten Tomatoes</a></li>
+        <li><a href="http://www.variety.com">
+        Variety</a></li>
+      </ul>
+    </p>
+
+    <p>
+      <ul>
+       <li><a href="pagina2.html">Home</a></li>
+      </ul>
+    </p>
   </body>
 </html>
