--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <script src="src/clase10.js"></script>
+    <script src="extra/clase5/3.js"></script>
   </head>
   <body>
     <h1>Hola</h1>
