--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@ Winnie-the-Pooh">
         Metacritic</a></li>
         <li><a href="http://www.rottentomatoes.com">
         Rotten Tomatoes</a></li>
-        <li><a href="http://www.variety.com">
+        <li><a id="pepita" href="http://www.variety.com">
         Variety</a></li>
       </ul>
     </p>
 
     <p>
       <ul>
-       <li><a href="pagina2.html">Home</a></li>
+       <li><a id="hola" href="pagina2.html">Home</a></li>
       </ul>
     </p>
+
+    <label id="age" for="age">Age:</label> <input type="text" name="age" />
   </body>
 </html>
